--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,30 +1,136 @@
 <mvc:View
 	controllerName="br.com.bioindica.controller.Main"
-	displayBlock="true"
+	height="100%"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:f="sap.f"
+	xmlns:card="sap.f.cards"
 	xmlns:core="sap.ui.core"
-	core:require="{
-		formatter: 'br/com/bioindica/model/formatter'
-	}">
-
+	xmlns:mvc="sap.ui.core.mvc"
+>
 	<Page
-		title="{i18n>appTitle}"
-		id="page">
+		id="idLoginPage"
+		showHeader="false"
+	>
 		<content>
-			<IllustratedMessage
-				title="{i18n>appTitle}"
-				illustrationType="sapIllus-SuccessHighFive"
-				enableVerticalResponsiveness="true"
-				description="{i18n>appDescription}">
-				<additionalContent>
-					<Button
-						id="helloButton"
-						text="{formatter: 'formatter.formatValue', path: 'i18n>btnText'}"
-						press="sayHello" />
-				</additionalContent>
-			</IllustratedMessage>
+			<VBox
+				id="idVBox"
+				justifyContent="Center"
+				alignContent="Center"
+				alignItems="Center"
+				class="sapUiLargeMarginTop sapUiSmallMarginBeginEnd"
+			>
+				<!-- <HBox > -->
+					<Title
+						id="idBioindicaTitle"
+						class="sapUiSmallMarginBottom sapUiLargeMarginTop"
+						text="{i18n>appTitle}"
+						level="H1"
+						titleStyle="H2"
+						textAlign="Center"
+					/>
+				<!-- </HBox> -->
+				
+				<f:Card id="id_Card">
+
+          <f:header>
+            <card:Header
+              id="idCardHeader"
+              title="{i18n>loginCardTitle}"
+              subtitle="{i18n>loginCardsubTitle}"/>
+          </f:header>
+
+          <f:content>
+            <VBox
+              id="idCardContentVBox"
+              class="sapUiSmallMargin"
+              width="100%">
+
+              <!-- EMAIL -->
+              <Label
+                id="idLoginEmailLabel"
+                text="{i18n>formEmail}"
+                required="true" />
+              <Input
+                id="idEmailLoginInput"
+                type="Email"
+				ariaLabelledBy="idLoginEmailLabel"
+                submit="onSubmitLogin"
+                liveChange="onLiveChangeEmail"
+                value="{loginModel>/LoginForm/Email}"
+                class="sapUiSmallMarginBottom" />
+
+              <!-- PASSWORD -->
+              <Label
+                id="idLoginPasswordLabel"
+                text="{i18n>formPassword}"
+                required="true" />
+              <Input
+                id="idPasswordLoginInput"
+                type="Password"
+                submit="onSubmitLogin"
+                liveChange="onLiveChangePass"
+                value="{loginModel>/LoginForm/Password}" />
+
+              <!-- REMEMBER ME -->
+              <HBox
+                id="idRememberMeHBox"
+                class="sapUiSmallMarginTop"
+                width="100%"
+                justifyContent="SpaceBetween">
+
+                <CheckBox
+                  id="idRememberMeCheckBox"
+                  text="{i18n>formRememberMe}"
+                  selected="{loginModel>/LoginForm/RememberMe}"/>
+
+                <Link
+                  id="idForgotPasswordLink"
+                  text="{i18n>formForgotPassword}"
+                  press="onForgot"
+                  class="sapUiTinyMarginTop" />
+              </HBox>
+
+              <VBox
+                id="idLoginButtonVBox"
+                width="100%"
+                class="sapUiTinyMarginTop"
+                justifyContent="Center"
+                alignContent="Center"
+                alignItems="Center">
+
+                <Button
+                  id="idLoginButton"
+                  width="15rem"
+                  type="Emphasized"
+                  text="{i18n>formButtonLogin}"
+                  press="onLogin" />
+              </VBox>
+
+              <HBox
+                id="idRegisterHBox"
+                width="100%"
+                justifyContent="Center">
+
+                <Text
+                  id="idDontHaveAccountText"
+                  text="{i18n>formDontHaveAccount}"
+                  class="sapUiSmallMarginTop" />
+
+                <ToolbarSpacer
+                  id="idToolbarSpacer"
+                  width="0.2rem" />
+
+                <Link
+                  id="idCreateAccountLink"
+                  text="{i18n>formCreateAccount}"
+                  press="onRouteRegister"
+                  class="sapUiSmallMarginTop" />
+              </HBox>
+            </VBox>
+          </f:content>
+			</f:Card>
+
+			</VBox>
 		</content>
 	</Page>
-
 </mvc:View>
